<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ciandt.cursoandroid.worldwondersapp.activity.RegisterActivity"
    android:id="@+id/register_layout" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:text="@string/register_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/register_nome"
                android:ems="10"
                android:id="@+id/edittext_register_nome"
                android:layout_marginBottom="@dimen/view_margin"/>

            <TextView
                android:text="@string/register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edittext_register_email"
                android:hint="@string/register_email"
                android:layout_marginBottom="@dimen/view_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register_senha"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:id="@+id/edittext_register_senha"
                android:layout_marginBottom="@dimen/view_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register_confirmacao_senha"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:hint="@string/register_confirmacao_senha"
                android:ems="10"
                android:id="@+id/edittext_register_confirmacao_senha"
                android:layout_marginBottom="@dimen/view_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register_pais"
                android:layout_gravity="left" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_register_pais"
                android:layout_marginBottom="@dimen/view_margin"
                android:entries="@array/array_country"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register_idioma"
                android:layout_gravity="left"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/autocompletetextview_register_idioma"
                android:layout_marginBottom="@dimen/view_margin"
                    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register_sexo"
                android:layout_gravity="left"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_gravity="left"
                android:id="@+id/radiogroup_register_sexo">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_sexo_masculino"
                    android:id="@+id/radiobutton_register_masculino"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="@dimen/view_margin"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_sexo_feminino"
                    android:id="@+id/radiobutton_register_feminino"
                    android:layout_gravity="center_horizontal" />

                </RadioGroup>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_notificacoes"
                android:id="@+id/checkbox_register_notificacoes"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_gravity="left" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_enviar"
                android:id="@+id/button_register_enviar"
                android:layout_marginBottom="@dimen/view_margin" />

            </LinearLayout>
    </ScrollView>


</LinearLayout>
