<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/world_wonders" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/login_email"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <EditText
        android:id="@+id/edittext_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/login_senha"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <EditText
        android:id="@+id/edittext_login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_senha"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/button_login_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/login_entrar" />

    <Button
        android:id="@+id/button_login_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/login_registrar" />


</LinearLayout>
